# LLMKit

./: .gitignore  README.md  package.json  pnpm-lock.yaml
examples/backend/: go.mod  main.go
examples/multiple-agent/: index.ts  store.ts  tsconfig.json
examples/nextjs/: next.config.ts  pnpm-lock.yaml  tsconfig.json
examples/nextjs/app/: page.tsx  store.ts  view-model.ts
examples/nextjs/hooks/: index.ts
examples/note/: .env  .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.mjs
examples/note/src/: index.tsx  style.css
examples/note/src-tauri/: Cargo.toml  tauri.conf.json
examples/note/src-tauri/capabilities/: default.json
examples/note/src-tauri/migrations/: 20250122085122_init.sql
examples/note/src-tauri/src/: lib.rs
examples/note/src-tauri/src/commands/: llm_agent.rs  llm_provider.rs  llm_service.rs  mod.rs  note.rs
examples/note/src-tauri/src/internals/: error.rs  mod.rs  state.rs
examples/react/: index.html  package.json  pnpm-lock.yaml  postcss.config.cjs  tailwind.config.cjs  tsconfig.json  vite.config.ts
examples/react/src/: App.tsx  hooks.ts  index.css  (+2 more)
examples/solidjs/: vite.config.ts
examples/vue/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
examples/weapp/: project.config.json
src/: index.ts  providers.ts
src/libs/: base.ts  chatbox.ts  chatroom.ts  checkbox.ts  form.ts  http_client.inject.axios.ts  http_client.ts  input.ts  llm_agent.ts  llm_provider.ts  llm_service.node.ts  llm_service.ts  llm_service.web.ts  presence.ts  result.ts  storage.ts  types.ts
(+75 files in other folders)
