[package]
name = "note"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "note_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.3"
tokio = "1.41.1"
once_cell = "1.20.2"
rust-embed = "8.5.0"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio"] }
futures = "0.3.31"
dotenv = "0.15.0"
lazy_static = "1.4"
md5 = "0.7"
futures-util = "0.3"
uuid = { version = "1.4", features = ["v4"] }
bytes = "1.4"
byteorder = "1.4"
encoding_rs = "0.8"
encoding = "0.2.33"
dirs = "6.0.0"
regex = "1.5"
base64 = "0.22.1"
anyhow = "1.0"
log = "0.4.25"
